--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<a href="https://www.callofduty.com/modernwarfare/preorder">Modernwarfare</a>
-<a href="https://www.epicgames.com/fortnite/en-US/home">Fortnite</a>
-<a href="https://www.bungie.net/">Destiny 2</a>
-<a href="http://tritechsc.org/">TriTech-Cyber</a> 
+  <head><title>Treyster509v2</title>
 <style>
+  html{
+      font-family: system-ui, sans-serif;
+   }
+  
+  body{
+    margin: 0px;
+    background-color: #fff;
+    color: #2aa198;
+    font-family: system-ui, sans-serif;
+}
+a{
+  color: #268bd2;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #2aa198;
+}
+
+  .thetop{
+  position:absolute;
+  top:0px;
+  left:0px;
+  }  
+  
+.location{
+  position:absolute;
+  top:110px;
+  left:10%;
+}
 </style>
 </head>
 <body>
-{
-  background-image: ("/clip-404425-space-galaxy-stars-background");
-}
-  
-
-
-<center><title>Cyber Security</title></center>
-  <div
-    <center><img src = "img/Treylogo.png" height="60%" width="80%"></center>
-  </div>
+    <center><img src = "img/Treylogo.png" height="60%" ></center>
 </body>
 </html>
  
