--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head><title>Treyster509v2</title>
+	<link rel="stylesheet" href="css/custom.css">
 <style>
   html{
       font-family: system-ui, sans-serif;
@@ -35,7 +36,47 @@ a:hover{
 </style>
 </head>
 <body>
-    <center><img src = "img/Treylogo.png" height="60%" ></center>
+	<!-- start of menu -->
+	   <nav class="menu">
+        <div class="menu_buttonWrapper">
+            <span class="menu_button" tabindex="1">
+                <span class="menu_text">
+                    Menu
+                </span>
+                <svg   xmlns="http://www.w3.org/2000/svg"    viewBox="0 0 124 124"
+                     class="menu_hamburger"
+                     aria-labelledby="menuIconTitle menuIconDesc"
+                     role="img"
+                >
+                    <title id="menuIconTitle">Navigation menu icon</title>
+                    <desc id="menuIconDesc">Three stacked horizontal lines</desc>
+                    <g>
+                        <path d="M112 6H12C5.4 6 0 11.4 0 18s5.4 12 12 12h100c6.6 0 12-5.4 12-12s-5.4-12-12-12zM112 50H12C5.4 50 0 55.4 0 62s5.4 12 12 12h100c6.6 0 12-5.4 12-12s-5.4-12-12-12zM112 94H12c-6.6 0-12 5.4-12 12s5.4 12 12 12h100c6.6 0 12-5.4 12-12s-5.4-12-12-12z"/>
+                    </g>
+                </svg>
+            </span>
+        </div>
+
+        <ul class="menu_items">
+		<!-- li are the link items  -->
+            <li class="menu_item menu_item-current">
+                <a class="menu_link menu_link-current" href="http://Treyster509v2.github.io">Treyster509v2.github.io</a>
+            </li>
+            <li class="menu_item">
+                <a  class="menu_link" href="https://github.com/Treyster509v2?tab=repositories" target = "_blank">Repos </a>
+            </li>
+            <li class="menu_item"> <a class="menu_link" href="https://github.com/icebowl/videos"target = "_blank" >  Video  </a>
+            </li>
+             <li class="menu_item"><a class="menu_link" href="projects/index.html" target = "_blank" > Projects </a>
+			</li>
+            <li class="menu_item"><a class="menu_link" href="about.html"  > About  </a>
+			</li>
+        </ul>
+    </nav>
+	<!-- end of menu -->
+	
+	
+    <center><img src = "img/treylogo.png"  ></center>
 </body>
 </html>
  
