--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ a:hover{
   top:110px;
   left:10%;
 }
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="img/treylogo.png">
-<i class="material-icons">img/treylogo.png</i>
 </style>
 </head>
 <body>
