--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@ a:hover{
 	
     <center><img src = "img/treylogo.png"  ></center>
 </body>
+<footer>
+  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1>Bootstrap Tutorial</h1> 
+    <p>Bootstrap is the most popular HTML, CSS...</p> 
+  </div>
+  </div>
+</footer>
 </html>
  
 
